<resources>
    <string name="app_name">Flag Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Flag Quiz</string>
    <string name="welcome_subtext">Test Your Knowledge</string>
    <string name="start_btn">Start</string>
    <string name="correct">Correct</string>
    <string name="empty">Empty</string>
    <string name="wrong">Wrong</string>
    <string name="question">Which country does this flag belongs to?</string>
    <string name="answer">Answer</string>
    <string name="result_head">Result</string>
    <string name="next_btn">Skip</string>
    <string name="restart">Restart Quiz</string>
    <string name="exit">Exit</string>
</resources>